--- a/Surveylitics.html
+++ b/Surveylitics.html
@@ -19,11 +19,59 @@
       padding: 15px;
         }
   </style>
+  <style>
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    display: inline;
+  }
+  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+  ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #555;
+  }
+
+  li {
+  float: left;
+  }
+
+  li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  }
+
+  li a:hover:not(.active) {
+  background-color: #111;
+  }
+
+  .active {
+  background-color: #333;
+  }
+  </style>
 </head>
 <body>
-  <!--<button>Click me</button>}\-->
+  <!--
+  <button>Click me</button>}\-->
 <h5><a href="https://www.google.com">Login</a> | <a href="https://www.google.com">Create Account</a>
 </h5>
+<ul class="sidenav">
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#register">Register</a></li>
+  <li><a href="#select">Select</a></li>
+  <li><a href="#analytics">Analytics</a></li>
+</ul>
 <div class="jumbotron text-center">
   <h1>Surveylitics</h1>
   <p>Welcome to the newest survey & analytics tool on the web.</p>
