minor html update
minor footer and commented txt chg

--- a/Surveylitics.html
+++ b/Surveylitics.html
@@ -62,8 +62,7 @@
   </style>
 </head>
 <body>
-  <!--
-  <button>Click me</button>}\-->
+  <!--<button>Click me</button>}\-->
 <h5><a href="https://www.google.com">Login</a> | <a href="https://www.google.com">Create Account</a>
 </h5>
 <ul class="sidenav">
@@ -108,7 +107,7 @@
   </div>
 </div>
 <h6>
-  <i>This site is being built as a training project. Any resemblance to copyrighted material or protected marks or brand is accidental.</i>Click <a href="https://www.google.com">Privacy Policy</a> or <a href="https://www.google.com">Terms and Conditions</a>
-</h6>
+  <i>This site is being built as a training project. Any resemblance to copyrighted material or marks is accidental.</i> <a href="https://www.google.com">Privacy Policy</a>, <a href="https://www.google.com">Terms & Conditions</a> Contact Info: <a href="mailto:someone@example.com">someone@example.com</a>
+    .</h6>
 </body>
 </html>
